make navbar fixed and correct logo alignment

--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -1,5 +1,6 @@
 .v2-navbar {
     min-height: 50px;
+    width:1665px !important;
 }
 .v2-navbar-nav > li > a {
     height:auto;
